# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.16 2009-09-23 09:51:58 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.5 (2009/??/??)
 - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
    must be defined.
 - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
    Firefox-Autocomplete feature.
 - (2009/09/23) Fixed bug#4320 - Javascript-check on empty body not working
    with RichText-Editor (RTE).
 - (2009/09/23) Fixed bug#2936 - $QData{""} and $Quote{""} crashes if a space
    is set between the arguments.
 - (2009/09/22) Fixed bug# 4262 - Encoding issue with Event-based notifications.
 - (2009/09/22) Fixed bug# 1420 - $Text{"User"} instead of $Text{"Username"} in
    AdminUserForm.dtl
 - (2009/09/22) Ensured that plain article body is used for ArticleViewModules
    in AgentTicketZoom.
 - (2009/09/21) Fixed bug#2087 - AgentTicketMove does not consider responsible feature.
 - (2009/09/21) Fixed bug#4029 - S/MIME activation with misunderandable
    message/incomplete documentation.
 - (2009/09/21) Fixed bug#3408 - Richtext editor - editor windows is way to small.
 - (2009/09/21) Fixed bug#4188 - Moving junk mails unnecessarily need subject and body.
 - (2009/09/21) Fixed bug#4189 - RTE off inserts a blank line in the text editor field.
 - (2009/09/21) Fixed bug#4080 - Rich editors javascript overrides onload function.
 - (2009/09/21) Fixed bug#3818 - Customer History - Small/Medium/Preview does
    not work.
 - (2009/09/21) Fixed bug#2532 - Problem when setting queues and subqueues to invalid.
 - (2009/09/18) Updated Spanish translation, thanks to Gustavo Azambuja!
 - (2009/09/16) Fixed bug#4288 - 4288: Use of uninitialized value in
    AdminGenericAgent.pm