@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.16 2009-09-23 09:51:58 martin Exp $
+# $Id: CHANGES,v 1.993.2.17 2009-09-23 10:53:33 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.5 (2009/??/??)
+ - (2009/09/23) Fixed bug#3923 - Frontend::Output::FilterText###OutputFilterTextAutoLink
+    does not work.
  - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
     must be defined.
  - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
